# CVAPIs

OpenCV/: CMakeLists.txt  main.cpp
OpenCV/include/: FeatureDetector.h
OpenCV/src/: FeatureDetector.cpp
Python/: test.py
